--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <body>
         <h1>Harry Derouich</h1>
+        <p>Cambridge, UK</p>
         <p>A work in progress...</p>
     </body>
 </html>
