--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           
           <li class="nav-item dropdown">
@@ -49,42 +49,61 @@
       </div>
     </nav>
 
-
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Harry Derouich</h1>
-        <p class="lead">Web & Digital Marketing Specialist</p>
-        <hr class="my-2">
-        <p>Experienced Web & Digital Marketing Specialist with a demonstrated history of working in various B2B and B2C industries.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">View Portfolio</a>
-        </p>
-      </div>
+    <div class="container">
+        <h3 style="text-align:center;">Portfolio</h3>
+        <div class="card-container">
+          <div class="card">
+            <a href="/"><img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="/portfolio/motoloko">MotoLoko</a></h4>
+              <p class="card-text">My most major project to date. Feature-rich, multi-currency eCommerce site in the B2C motorsport industry.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Addictive Merchandise</h4>
+              <p class="card-text">B2B promotional merchandise site with quotation system and extensive data cleansing.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Highways Training UK</h4>
+              <p class="card-text">Multi-page informational site for a specialist training provider.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Tom Hanson Specialist Cars</h4>
+              <p class="card-text">Used vehicle directory for an independent car dealer.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Derby Alloys</h4>
+              <p class="card-text">Multi-page informational site for an alloy wheel refurbisher.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">R&W Electrical Contractors</h4>
+              <p class="card-text">Multi-page informational site and logo design for an electrical company.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://placehold.co/300x200/EEE/31343C" alt="">
+            <div class="card-body">
+              <h4 class="card-title">ELCO Building Services</h4>
+              <p class="card-text">UMulti-page informational site for a Nottingham-based builders.</p>
+            </div>
+          </div>
+        </div>
     </div>
 
-    <div class="container homepage-cards" style="display: flex;">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p class="card-text">Get to know me, my background and what interests me.</p>
-          <a href="/about.html" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Portfolio</h5>
-          <p class="card-text">Dive in to some of the sites I've brought to life.</p>
-          <a href="#" class="btn btn-primary">View All</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Contact</h5>
-          <p class="card-text">Want to discuss an idea or just fancy a chat? Get in touch.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
