--- a/portfolio/motoloko.html
+++ b/portfolio/motoloko.html
@@ -23,11 +23,11 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">About</a>
           </li>
           
           <li class="nav-item dropdown">
@@ -49,42 +49,11 @@
       </div>
     </nav>
 
-
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Harry Derouich</h1>
-        <p class="lead">Web & Digital Marketing Specialist</p>
-        <hr class="my-2">
-        <p>Experienced Web & Digital Marketing Specialist with a demonstrated history of working in various B2B and B2C industries.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">View Portfolio</a>
-        </p>
-      </div>
+    <div class="container">
+        <h3 style="text-align:center;">MotoLoko</h3>
+            
     </div>
 
-    <div class="container homepage-cards" style="display: flex;">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p class="card-text">Get to know me, my background and what interests me.</p>
-          <a href="/about.html" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Portfolio</h5>
-          <p class="card-text">Dive in to some of the sites I've brought to life.</p>
-          <a href="#" class="btn btn-primary">View All</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Contact</h5>
-          <p class="card-text">Want to discuss an idea or just fancy a chat? Get in touch.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
