Portfolio subpages created, navbar synced

--- a/portfolio/addictive-merchandise.html
+++ b/portfolio/addictive-merchandise.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Home | Harry Derouich</title>
+    <title>Addictive Merchandise | Harry Derouich</title>
   </head>
   <body>
 
@@ -23,18 +23,18 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
           </li>
           
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="/portfolio.html" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
             <div class="dropdown-menu" aria-labelledby="dropdownId">
               <a class="dropdown-item" href="/portfolio/motoloko.html">MotoLoko</a>
-              <a class="dropdown-item" href="/portfolio/addictive-merchandise.html">Addictive Merchandise</a>
+              <a class="dropdown-item active" href="/portfolio/addictive-merchandise.html">Addictive Merchandise</a>
               <a class="dropdown-item" href="/portfolio/highways-training-uk.html">Highways Training UK</a>
               <a class="dropdown-item" href="/portfolio/tom-hanson-specialist-cars.html">Tom Hanson Specialist Cars</a>
               <a class="dropdown-item" href="/portfolio/derby-alloys.html">Derby Alloys</a>
@@ -49,42 +49,11 @@
       </div>
     </nav>
 
-
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Harry Derouich</h1>
-        <p class="lead">Web & Digital Marketing Specialist</p>
-        <hr class="my-2">
-        <p>Experienced Web & Digital Marketing Specialist with a demonstrated history of working in various B2B and B2C industries.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="/portfolio.html" role="button">View Portfolio</a>
-        </p>
-      </div>
+    <div class="container">
+        <h3 style="text-align:center;">Addictive Merchandise</h3>
+            
     </div>
 
-    <div class="container card-container" style="display: flex;">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p class="card-text">Get to know me, my background and what interests me.</p>
-          <a href="/about.html" class="btn btn-primary full-width">Learn More</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Portfolio</h5>
-          <p class="card-text">Dive in to some of the sites I've brought to life.</p>
-          <a href="/portfolio.html" class="btn btn-primary full-width">View All</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Contact</h5>
-          <p class="card-text">Want to discuss an idea or just fancy a chat? Get in touch.</p>
-          <a href="/contact.html" class="btn btn-primary full-width">Contact Me</a>
-        </div>
-      </div>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
