--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Home | Harry Derouich</title>
+    <title>Contact | Harry Derouich</title>
   </head>
   <body>
 
@@ -49,42 +49,10 @@
       </div>
     </nav>
 
-
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Harry Derouich</h1>
-        <p class="lead">Web & Digital Marketing Specialist</p>
-        <hr class="my-2">
-        <p>Experienced Web & Digital Marketing Specialist with a demonstrated history of working in various B2B and B2C industries.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="/portfolio.html" role="button">View Portfolio</a>
-        </p>
-      </div>
+    <div class="container">
+      
     </div>
 
-    <div class="container card-container" style="display: flex;">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p class="card-text">Get to know me, my background and what interests me.</p>
-          <a href="/about.html" class="btn btn-primary full-width">Learn More</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Portfolio</h5>
-          <p class="card-text">Dive in to some of the sites I've brought to life.</p>
-          <a href="/portfolio.html" class="btn btn-primary full-width">View All</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Contact</h5>
-          <p class="card-text">Want to discuss an idea or just fancy a chat? Get in touch.</p>
-          <a href="/contact.html" class="btn btn-primary full-width">Contact Me</a>
-        </div>
-      </div>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
