--- a/portfolio.html
+++ b/portfolio.html
@@ -53,51 +53,51 @@
         <h3 style="text-align:center;">Portfolio</h3>
         <div class="card-container">
           <div class="card">
-            <a href="/"><img class="card-img-top" src="/docs/assets/images/portfolio/motoloko-homepage-screenshot.jpg" alt="motoloko website screenshot"></a>
+            <a href="/portfolio/motoloko.html"><img class="card-img-top" src="/docs/assets/images/portfolio/motoloko-homepage-screenshot.jpg" alt="motoloko website screenshot"></a>
             <div class="card-body">
               <h4 class="card-title"><a href="/portfolio/motoloko">MotoLoko</a></h4>
               <p class="card-text">My most major project to date. Feature-rich, multi-currency eCommerce site in the B2C motorsport industry.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/addictive-merchandise-homepage-screenshot.jpg" alt="addictive merchandise website screenshot">
+            <a href="/portfolio/addictive-merchandise.html"><img class="card-img-top" src="/docs/assets/images/portfolio/addictive-merchandise-homepage-screenshot.jpg" alt="addictive merchandise website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">Addictive Merchandise</h4>
+              <h4 class="card-title"><a href="/portfolio/addictive-merchandise.html">Addictive Merchandise</a></h4>
               <p class="card-text">B2B promotional merchandise site with quotation system and extensive data cleansing.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/highways-training-uk-homepage-screenshot.jpg" alt="highways training uk website screenshot">
+            <a href="/portfolio/highways-training-uk.html"><img class="card-img-top" src="/docs/assets/images/portfolio/highways-training-uk-homepage-screenshot.jpg" alt="highways training uk website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">Highways Training UK</h4>
+              <h4 class="card-title"><a href="/portfolio/highways-training-uk.html">Highways Training UK</a></h4>
               <p class="card-text">Multi-page informational site for a specialist training provider.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/tom-hanson-specialist-cars-homepage-screenshot.jpg" alt="tom hanson specialist cars website screenshot">
+            <a href="/portfolio/tom-hanson-specialist-cars.html"><img class="card-img-top" src="/docs/assets/images/portfolio/tom-hanson-specialist-cars-homepage-screenshot.jpg" alt="tom hanson specialist cars website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">Tom Hanson Specialist Cars</h4>
+              <h4 class="card-title"><a href="/portfolio/tom-hanson-specialist-cars.html">Tom Hanson Specialist Cars</a></h4>
               <p class="card-text">Used vehicle directory for an independent car dealer.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/derby-alloys-homepage-screenshot.jpg" alt="derby alloys website screenshot">
+            <a href="/portfolio/derby-alloys.html"><img class="card-img-top" src="/docs/assets/images/portfolio/derby-alloys-homepage-screenshot.jpg" alt="derby alloys website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">Derby Alloys</h4>
+              <h4 class="card-title"><a href="/portfolio/derby-alloys.html">Derby Alloys</a></h4>
               <p class="card-text">Multi-page informational site for an alloy wheel refurbisher.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/rw-electrical-contractors-homepage-screenshot.jpg" alt="rw electrical contractors website screenshot">
+            <a href="/portfolio/rw-electrical-contractors.html"><img class="card-img-top" src="/docs/assets/images/portfolio/rw-electrical-contractors-homepage-screenshot.jpg" alt="rw electrical contractors website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">R&W Electrical Contractors</h4>
+              <h4 class="card-title"><a href="/portfolio/rw-electrical-contractors.html">R&W Electrical Contractors</a></h4>
               <p class="card-text">Multi-page informational site and logo design for an electrical company.</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/docs/assets/images/portfolio/elco-building-services-homepage-screenshot.jpg" alt="elco building services website screenshot">
+            <a href="/portfolio/elco-building-services.html"><img class="card-img-top" src="/docs/assets/images/portfolio/elco-building-services-homepage-screenshot.jpg" alt="elco building services website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title">ELCO Building Services</h4>
+              <h4 class="card-title"><a href="/portfolio/elco-building-services.html">ELCO Building Services</a></h4>
               <p class="card-text">UMulti-page informational site for a Nottingham-based builders.</p>
             </div>
           </div>
