--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-3">Harry Derouich</h1>
+        <h1 class="display-4">Harry Derouich</h1>
         <p class="lead">Web & Digital Marketing Specialist</p>
         <hr class="my-2">
         <p>Experienced Web & Digital Marketing Specialist with a demonstrated history of working in various B2B and B2C industries.</p>
@@ -67,7 +67,7 @@
         <div class="card-body">
           <h5 class="card-title">About</h5>
           <p class="card-text">Get to know me, my background and what interests me.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a href="/about.html" class="btn btn-primary full-width">Learn More</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
