ML and AM portfolio pages added.
Tweaks to main portfilio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Harry Derouich</title>
+    <title>Portfolio | Harry Derouich</title>
   </head>
   <body>
 
@@ -55,7 +55,7 @@
           <div class="card">
             <a href="/portfolio/motoloko.html"><img class="card-img-top" src="/docs/assets/images/portfolio/motoloko-homepage-screenshot.jpg" alt="motoloko website screenshot"></a>
             <div class="card-body">
-              <h4 class="card-title"><a href="/portfolio/motoloko">MotoLoko</a></h4>
+              <h4 class="card-title"><a href="/portfolio/motoloko.html">MotoLoko</a></h4>
               <p class="card-text">My most major project to date. Feature-rich, multi-currency eCommerce site in the B2C motorsport industry.</p>
             </div>
           </div>
@@ -98,12 +98,21 @@
             <a href="/portfolio/elco-building-services.html"><img class="card-img-top" src="/docs/assets/images/portfolio/elco-building-services-homepage-screenshot.jpg" alt="elco building services website screenshot"></a>
             <div class="card-body">
               <h4 class="card-title"><a href="/portfolio/elco-building-services.html">ELCO Building Services</a></h4>
-              <p class="card-text">UMulti-page informational site for a Nottingham-based builders.</p>
+              <p class="card-text">Multi-page informational site for a Nottingham-based builders.</p>
             </div>
           </div>
         </div>
     </div>
 
+      <div class="container">
+        <h4>Other Sites</h4>
+        <p>Additional projects I've worked in part on or contributed to.</p>
+        <ul>
+          <a href="https://plushproperty.co.uk/"><p>Plush Property</p></a>
+          <a href="https://hardrockhell.com/"><p>Hard Rock Hell</a> (and sister sites)</p>
+          <a href="https://www.davewaymanfencing.co.uk/"><p>Dave Wayman Fencing</p></a>
+        </ul>
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
