--- a/portfolio/addictive-merchandise.html
+++ b/portfolio/addictive-merchandise.html
@@ -50,9 +50,18 @@
     </nav>
 
     <div class="container">
-        <h3 style="text-align:center;">Addictive Merchandise</h3>
-            
-    </div>
+      <h3 style="text-align:center;">Addictive Merchandise</h3>
+      <p>Addictive Merchandise are a well established promotional merchandise distributor serving customers across the country. Wanting something more managable than their legacy PHP site, I undertook the creation of a Wordpress/WooCommerce based product catalog.</p>
+      <p>As part of the process, Addictive Merchandise had to ingest a large number of data feeds from partner factories, containing product ranges and their specification. The cleansing and standardising of data was included in my work for this project.</p>
+      <h4>Features</h4>
+      <ul>
+        <li>Over 1,300 products published with quantity based pricing matrix.</li>
+        <li>Straightforward quotation request system.</li>
+        <li>Additional information and contact pages.</li>
+      </ul>
+      <p>Further tasks as outlined above included data manipulation and preparation of provided images.</p>
+      <a class="btn btn-primary" href="/portfolio.html" role="button">Return to Portfolio</a>
+  </div>
 
 
     <!-- Optional JavaScript -->
