--- a/portfolio/motoloko.html
+++ b/portfolio/motoloko.html
@@ -51,8 +51,21 @@
 
     <div class="container">
         <h3 style="text-align:center;">MotoLoko</h3>
-            
+        <p>MotoLoko is a startup motocross kit and apparel brand in Nottingham, UK. I built the original site and have been upgrading and maintaining it since.</p>
+        <h4>Features</h4>
+        <ul>
+          <li>Customised product listings with personalisation options.</li>
+          <li>Configurable product bundles.</li>
+          <li>Automated vendor/factory production reports.</li>
+          <li>A catalog of connected marketing services including Facebook Pixel, Google Analytics, Mailchimp & Bulkgate SMS.</li>
+          <li>Product catalog feeds for Facebook & Google Shopping.</li>
+          <li>Cart abandonment followups.</li>
+        </ul>
+        <p>I also aid in product design, listing creation, customer service, production and finance.</p>
+        <a class="btn btn-primary" href="/portfolio.html" role="button">Return to Portfolio</a>
     </div>
+
+    
 
 
     <!-- Optional JavaScript -->
