--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Harry Derouich</title>
+    <title>About | Harry Derouich</title>
   </head>
   <body>
 
