Removed inactive portfolio pages, updated contact

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
@@ -35,15 +35,10 @@
             <div class="dropdown-menu" aria-labelledby="dropdownId">
               <a class="dropdown-item" href="/portfolio/motoloko.html">MotoLoko</a>
               <a class="dropdown-item" href="/portfolio/addictive-merchandise.html">Addictive Merchandise</a>
-              <a class="dropdown-item" href="/portfolio/highways-training-uk.html">Highways Training UK</a>
-              <a class="dropdown-item" href="/portfolio/tom-hanson-specialist-cars.html">Tom Hanson Specialist Cars</a>
-              <a class="dropdown-item" href="/portfolio/derby-alloys.html">Derby Alloys</a>
-              <a class="dropdown-item" href="/portfolio/rw-electrical-contractors.html">R&W Electrical Contractors</a>
-              <a class="dropdown-item" href="/portfolio/elco-building-services.html">ELCO Building Services</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link active" href="/contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -51,7 +46,11 @@
 
     <div class="container">
       <h3 style="text-align:center;">Contact</h3>
-    </div>
+      <p>If you have an idea or would just like to get in touch: </p><script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'l'+'&'+'#'+'1'+'1'+'6'+';'+'o'+'&'+
+        '#'+'5'+'8'+';'+'h'+'a'+'%'+'7'+'2'+'r'+'y'+'&'+'#'+'6'+'4'+';'+'d'+'e'+'&'+'#'+'1'+'1'+'4'+';'+'o'+
+        '%'+'&'+'#'+'5'+'5'+';'+'5'+'&'+'#'+'1'+'0'+'5'+';'+'.'+'&'+'#'+'3'+'7'+';'+'6'+'3'+'h'+"'"+
+        '>'+'S'+'e'+'n'+'d'+' '+'m'+'e'+' '+'a'+'n'+' '+'e'+'m'+'a'+'i'+'l'+'<'+'/'+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript>
+</div>
 
 
     <!-- Optional JavaScript -->
