--- a/github.html
+++ b/github.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; URL=https://github.com/harryderouich/windPredict" />
-    <title>windPredict | Harry Derouich</title>
+    <meta http-equiv="refresh" content="0; URL=https://github.com/harryderouich" />
+    <title>GitHub | Harry Derouich</title>
   </head>
   <body>
   </body>
