--- a/cv.html
+++ b/cv.html
@@ -405,9 +405,13 @@
                             <div class="card-body">
                                 <ul class="small mb-0">
                                     <li><strong>Computer Science Society</strong> — President <span class="text-muted">(2025 – present)</span></li>
-                                    <li><strong>eSports Society</strong> — Social Media Administrator <span class="text-muted">(2025 – present)</span></li>
+                                    <li><strong>eSports Society </strong><span class="text-muted">(2023 – present)</span></li>
+                                    <ul>
+                                        <li>Social Media Administrator <span class="text-muted">(2025 – present)</span></li>
+                                        <li>Team Captain — Counter-Strike 2 <span class="text-muted">(2025 – present)</span></li>
+                                        <li>Member & Player <span class="text-muted">(2023 – present)</span></li>
+                                    </ul>
                                     <li><strong>Photography Society</strong> — PR Officer <span class="text-muted">(2024 – 2025)</span></li>
-                                    <li><strong>eSports Society</strong> — Member <span class="text-muted">(2023 – present)</span></li>
                                     <li><strong>ARU Boat Club (Rowing)</strong> — Member <span class="text-muted">(2023 – 2024)</span></li>
                                 </ul>
                             </div>
