--- a/cv.html
+++ b/cv.html
@@ -279,7 +279,7 @@
                             <div class="card-body">
                                 <div class="mb-4">
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">Gateway Qualifications, Colchester/Remote — <span class="fw-semibold">Digital Projects & Analytics Intern</span></h3>
+                                        <h3 class="h6 mb-1">Digital Projects & Analytics Intern — <span class="fw-semibold">Gateway Qualifications (Colchester/Remote)</span></h3>
                                         <span class="small text-muted">May 2025 – Aug 2025</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -291,7 +291,7 @@
                                 </div>
                                 <div class="mb-4">
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">Freelance — <span class="fw-semibold">Web &amp; Digital Marketing Specialist</span></h3>
+                                        <h3 class="h6 mb-1">Web &amp; Digital Marketing Specialist — <span class="fw-semibold">Freelance</span></h3>
                                         <span class="small text-muted">Apr 2019 – Present</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -300,7 +300,7 @@
                                 </div>
                                 <div class="mb-4">
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">etyres, Cambridge — <span class="fw-semibold">Marketing Executive</span></h3>
+                                        <h3 class="h6 mb-1">Marketing Executive — <span class="fw-semibold">etyres (Cambridge)</span></h3>
                                         <span class="small text-muted">Apr 2019 – Aug 2019</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -311,7 +311,7 @@
                                 </div>
                                 <div class="mb-4">
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">Addictive Merchandise, Cambridge — <span class="fw-semibold">Marketing Assistant</span></h3>
+                                        <h3 class="h6 mb-1">Marketing Assistant — <span class="fw-semibold">Addictive Merchandise (Cambridge)</span></h3>
                                         <span class="small text-muted">Feb 2017 – Apr 2019</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -323,7 +323,7 @@
                                 </div>
                                 <div class="mb-4">
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">Addictive Interactive, Cambridge — <span class="fw-semibold">Web &amp; Social Media Apprentice</span></h3>
+                                        <h3 class="h6 mb-1">Web &amp; Social Media Apprentice — <span class="fw-semibold">Addictive Interactive (Cambridge)</span></h3>
                                         <span class="small text-muted">Sep 2015 – Feb 2017</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -334,7 +334,7 @@
                                 </div>
                                 <div>
                                     <div class="d-flex justify-content-between flex-wrap">
-                                        <h3 class="h6 mb-1">G's Fresh, Barway — <span class="fw-semibold">Digital Media Assistant</span></h3>
+                                        <h3 class="h6 mb-1">Digital Media Assistant — <span class="fw-semibold">G's Fresh (Barway)</span></h3>
                                         <span class="small text-muted">Jul 2013 – Jul 2013</span>
                                     </div>
                                     <ul class="small mb-0">
@@ -475,9 +475,10 @@
                             <div class="card-body small">
                                 <div class="fw-semibold mb-1">Quick Links</div>
                                 <ul class="list-unstyled mb-0">
-                                    <li><a id="emailLink2" class="link-underline" href="#" aria-label="email">Email me</a></li>
+                                    <li><a class="link-underline" href="https://github.com/harryderouich" target="_blank" rel="noopener">GitHub</a></li>
+                                    <li><a class="link-underline" href="https://www.linkedin.com/in/harryderouich/" target="_blank" rel="noopener">LinkedIn</a></li>
                                     <li><a class="link-underline" href="https://deroui.ch" target="_blank" rel="noopener">Website</a></li>
-                                    <li><a class="link-underline" href="https://deroui.ch/portfolio" target="_blank" rel="noopener">Portfolio</a></li>
+                                    <li><a class="link-underline" href="https://deroui.ch/portfolio" target="_blank" rel="noopener">Web Portfolio</a></li>
                                 </ul>
                             </div>
                         </div>
