Added Wifi project to CV

--- a/cv.html
+++ b/cv.html
@@ -254,6 +254,12 @@
                                     <p class="small mb-0">This university assignment involved group collaboration during the planning phase, where we completed use case diagrams, wireframes, and other design elements. Following this, myself and each team member independently developed our own console-based application based on the shared planning.</p>
                                 </div>
                                 <div class="mb-3">
+                                    <h3 class="h6 mb-1">Public Wi-Fi Security Research – Report</h3>
+                                    <a class="small link-underline" href="https://deroui.ch/wifi" target="_blank" rel="noopener">deroui.ch/wifi</a>
+                                    <p class="small mb-0">
+                                        Research project (DOI: 10.5281/zenodo.17248867) investigating vulnerabilities in public Wi-Fi networks (WEP/WPA/WPA2/WPA3), user behaviour, and mitigation strategies. Conducted a thematic literature review and proposed actionable recommendations for improving user safety and industry practices.</p>
+                                </div>
+                                <div class="mb-3">
                                     <h3 class="h6 mb-1">CarSales Application – C</h3>
                                     <a class="small link-underline" href="https://deroui.ch/carsales" target="_blank" rel="noopener">deroui.ch/carsales</a>
                                     <p class="small mb-0">Console based car sales management application written in C, showcasing an understanding of procedural programming fundamentals.</p>
