Updates in line with main CV

--- a/cv.html
+++ b/cv.html
@@ -185,7 +185,7 @@
                         <h2 class="h4 section-title">Profile</h2>
                         <div class="card border-0 shadow-sm">
                             <div class="card-body">
-                                <p class="mb-0">Dedicated Computer Science student at Anglia Ruskin University with expertise in web development, digital marketing, and data analysis. Over the course of almost a decade in both freelance and corporate settings, I have developed strong skills in strategic planning and delivering complex technical solutions. Eager to apply my software engineering skills, including proficiency in C#, Java, Python and Linux, to contribute to impactful projects and grow within a dynamic and innovative team.</p>
+                                <p class="mb-0">Computer Science student at Anglia Ruskin University specialising in Software Engineering, Networking, and Digital Security. Experienced across academic, freelance, and corporate projects, including delivering client solutions and a technical internship. Skilled in C#, Java, Python, C, Linux systems, and data analysis, with proven strengths in problem-solving, teamwork, and communication. </p>
                             </div>
                         </div>
                     </section>
@@ -202,8 +202,7 @@
                                             <span class="small text-muted">Sep 2023 – Present</span>
                                         </div>
                                         <ul class="mb-1 small">
-                                            <li><strong>First Year (Completed):</strong> Introduction to Programming (73%), Computer Systems (69%), Operating Systems (84%), Software Principles (74%), Core Mathematics for Computing (93%).</li>
-                                            <li><strong>Second Year (Completed):</strong> Software Engineering (83%), Database Design &amp; Implementation (80%), AI &amp; The Future: A Threat to Humanity? (60%), Algorithm Analysis and Data Structures (93%), Network Routing (81%), Digital Security (77%), Computing Research Methodologies (77%).</li>
+                                            <li><strong>Completed Modules:</strong> Introduction to Programming, Computer Systems, Operating Systems, Software Principles, Core Mathematics for Computing, Software Engineering, Database Design & Implementation, Algorithm Analysis and Data Structures, Network Routing, Digital Security, Computing Research Methodologies – <strong>Predicted Grade: First-Class Honours</strong> (Average Grade: 83%)</li>
                                         </ul>
                                     </div>
                                     <div class="t-item mb-4">
@@ -432,44 +431,39 @@
                         <div class="card border-0 shadow-sm">
                             <div class="card-body small">
                                 <div class="mb-3">
-                                    <div class="fw-semibold mb-1">Coding Languages</div>
+                                    <div class="fw-semibold mb-1">Programming</div>
                                     <div class="d-flex flex-wrap gap-2">
                                         <span class="badge bg-primary-subtle text-primary-emphasis">C#</span>
                                         <span class="badge bg-primary-subtle text-primary-emphasis">Java</span>
                                         <span class="badge bg-primary-subtle text-primary-emphasis">C</span>
                                         <span class="badge bg-primary-subtle text-primary-emphasis">Python</span>
                                         <span class="badge bg-primary-subtle text-primary-emphasis">PHP</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Git</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">OOP</span>
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <div class="fw-semibold mb-1">Operating Systems</div>
                                     <div class="d-flex flex-wrap gap-2">
-                                        <span class="chip">Windows</span>
-                                        <span class="chip">macOS</span>
-                                        <span class="chip">Linux (Arch, openSUSE, QTS, Ubuntu)</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Windows</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">macOS</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Linux (Arch, openSUSE, QTS, Ubuntu)</span>
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <div class="fw-semibold mb-1">Web Development</div>
                                     <div class="d-flex flex-wrap gap-2">
-                                        <span class="chip">WordPress</span>
-                                        <span class="chip">Magento</span>
-                                        <span class="chip">HTML</span>
-                                        <span class="chip">CSS</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">WordPress</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Magento</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">HTML</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">CSS</span>
                                     </div>
                                 </div>
                                 <div class="mb-0">
-                                    <div class="fw-semibold mb-1">Digital Marketing &amp; Design</div>
+                                    <div class="fw-semibold mb-1">Networking &amp; Security</div>
                                     <div class="d-flex flex-wrap gap-2">
-                                        <span class="chip">SEO</span>
-                                        <span class="chip">CRM</span>
-                                        <span class="chip">Google Analytics</span>
-                                        <span class="chip">Google Ads</span>
-                                        <span class="chip">Social (FB/IG)</span>
-                                        <span class="chip">Email (HTML/MailChimp)</span>
-                                        <span class="chip">Photoshop</span>
-                                        <span class="chip">Illustrator</span>
-                                        <span class="chip">Premiere Pro</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Wireshark</span>
+                                        <span class="badge bg-primary-subtle text-primary-emphasis">Cisco Packet Tracer</span>
                                     </div>
                                 </div>
                             </div>
